@@ -7,6 +7,7 @@ Revision history for POE-Quickie
       return arrays instead of strings so it works with non-linebased output.
     - Eliminate the 'WheelArgs' parameter. Instead, any extra arguments will
       be passed to POE::Wheel::Run.
+    - Shut down the child's stdin if we don't have input to pass to it
 
 0.14  Fri Apr 29 03:17:16 GMT 2011
     - Add a warning to the Pod about using the convenience functions in
